# fastpost

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  aerich.ini  alembic.ini  gunicorn.conf.py  main.py  manage.py  pyproject.toml  rpc.py
apps/: __init__.py  dependencies.py  depends.py  types.py
apps/api/: __init__.py
apps/api/curd/: __init__.py  dependencies.py  types.py  view.py
apps/api/routes/: __init__.py  auth.py  common.py  curd.py  enums.py  user.py
apps/spi/: __init__.py  manage.py
apps/websocket/: __init__.py  manage.py
apps/websocket/routes/: hello.py  ticks.py
command/: __init__.py  db.py  mysql.py  shell.py  tools.py
common/: encrypt.py  kafka.py  redis.py  types.py  utils.py
core/: exceptions.py  factory.py  globals.py  resp_code.py  response.py  settings.py
db/: __init__.py  enums.py  fields.py  models.py  serializers.py
db/es/: __init__.py
db/hbase/: __init__.py  models.py
db/mysql/: __init__.py  curd.py  models.py  serializer.py
db/redis/: __init__.py  keys.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/gunicorn/: conf.py  logging.conf
deploy/kubernets/: conf.yaml  kuber.conf.yaml
fastpost/: exceptions.py  factory.py  globals.py  middlewares.py  resp_code.py  response.py  settings.py
migration/: env.py
migration/versions/: 461b5181a5e7_init.py  5104a7fbd7ed_init.py  bbb40ca363d6_init.py
migrations/models/: 0_20210707171620_init.sql  0_20210709102754_init.sql  0_20210714114911_init.sql
rpcs/: __init__.py
rpcs/hello/: client.py  hello.proto  hello_pb2.py  hello_pb2_grpc.py  server.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/e2e/http/: test_basic.py
tests/e2e/socket/: test_chat.py
tests/e2e/user/: test_basic.py
tests/functional/: __init__.py
