[tool.poetry]
name = "fastpost"
version = "0.1.0"
description = "Fastapi-start-kit with Postgre and sqlalchemy"
authors = ["phoenix <hypofiasco@gmail.com>"]

#[[tool.poetry.source]]
#name = "aliyun"
##url = "https://mirrors.aliyun.com/pypi/simple/"
##url = "https://pypi.doubanio.com/simple/"
##url = "https://mirrors.163.com/pypi/simple/"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
#default = true

[tool.poetry.dependencies]
python = "^3.7"
ipython = "7.24.1"
#sqlalchemy = "1.4.18"
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy.git"}
fastapi = "0.65.2"
uvicorn = "0.14.0"
gunicorn = "20.1.0"
typer = "0.3.2"
orjson = "3.5.3"
python-dotenv = "^0.12.0"
aiofiles = "0.7.0"
asyncpg = "0.23.0"
aioredis = "1.3.1"
aiokafka = "0.7.0"
alembic = "^1.6.2"
python-socketio = { extras = ["asyncio_client"], version = "^5.2.1" }
requests = "^2.25.1"
ujson = "^2.0"
httpx = "0.18.1"
pycryptodomex = "3.10.1"
pyopenssl = "20.0.1"
aiosmtplib = "1.1.6"
sentry-sdk = "^0.14.3"
passlib = "^1.7"
email-validator = "^1.0.5"
python-jose = { extras = ["cryptography"], version = "^3.1.0" }
psycopg2-binary = "^2.8.5"
fabric = "2.6.0"

[tool.poetry.dev-dependencies]
taskipy = "1.8.1"
asynctest = "0.13.0"
bandit = "1.7.0"
black = "19.10b0"
flake8 = "3.9.1"
isort = "5.1.4"
pytest = "6.2.4"

[tool.black]
exclude = '''
/(
    \.git
  | \.gitignore
  | \.dockerignore
  | Dockerfile
  | Makefile
  | \.env
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# [tool.poetry.scripts]
# fastcli = "fastpost.cli:cli"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

