[tool.poetry]
name = "fastpost"
version = "0.1.0"
description = "FastAPI-start-kit with MySQL and Tortoise-ORM"
authors = ["phoenix <hypofiasco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "7.24.1"
fastapi = "0.66.0"
aiomysql = "0.0.21"
mysqlclient = "2.0.3"
tortoise-orm = "0.17.5"
aerich = "0.5.4"
uvicorn = "0.14.0"
gunicorn = "20.1.0"
typer = "0.3.2"
orjson = "3.5.3"
python-dotenv = "^0.12.0"
aiofiles = "0.7.0"
aioredis = "1.3.1"
redis = "3.5.3"
aiokafka = "0.7.0"
happybase = "1.2.0"
python-socketio = { extras = ["asyncio_client"], version = "^5.2.1" }
requests = "^2.25.1"
ujson = "^2.0"
httpx = "0.18.1"
pycryptodomex = "3.10.1"
pyopenssl = "20.0.1"
aiosmtplib = "1.1.6"
sentry-sdk = "^0.14.3"
passlib = "^1.7"
email-validator = "^1.0.5"
python-jose = { extras = ["cryptography"], version = "^3.1.0" }
fabric3 = "1.14.post1"
python-multipart = "0.0.5"

[tool.poetry.dev-dependencies]
taskipy = "1.8.1"
asynctest = "0.13.0"
bandit = "1.7.0"
black = "19.10b0"
flake8 = "3.9.1"
isort = "5.1.4"
pytest = "6.2.4"
pytest-asyncio = "0.15.1"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

